# personal_project-_adelaide_metrocard_validation

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: README.md  mkdocs.yml
docs/docs/: banded-validations-metadata-2020-update.doc  index.md
notebooks/: 0-automatedataset.ipynb  1-exploratory-data-analysis.ipynb
