[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "personal_project:_adelaide_metrocard_validation"
version = "0.0.1"
description = "This is my analytic pro"
authors = [
  { name = "Possakorn K." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["personal_project:_adelaide_metrocard_validation"]
force_sort_within_sections = true
